# mastiff-backend

./: .gitignore  Cargo.toml
doc/: Dockerfile  book.toml
doc/src/: SUMMARY.md  container.md  recipe.md
src/: cli.rs  config.rs  lib.rs  main.rs  managers.rs  routes.rs
src/ftp/: auth.rs  mod.rs
src/managers/: docker.rs  recipe.rs
src/panel/: mod.rs
src/routes/: recipe.rs
