[package]
name = "mastiff-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "."
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libunftp = {git = "https://github.com/bolcom/libunftp", branch = "master"}
unftp-sbe-fs = {git = "https://github.com/bolcom/libunftp", branch = "master"}
axum = { version = "0.7.4", features = ["ws", "json", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
