[package]
name = "mastiff-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libunftp = { git = "https://github.com/bolcom/libunftp", branch = "master" }
unftp-sbe-fs = { git = "https://github.com/bolcom/libunftp", branch = "master" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
config = { version = "0.14.0", default-features = false, features = [
    "json",
    "toml",
] }
url = { version = "2.5.0", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
docker-api = { git = "https://github.com/vv9k/docker-api-rs.git", version = "0.14.0", features = ["par-compress"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
async-stream = "0.2"
async-compression = { version = "0.4.6", features = ["gzip", "tokio"] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.10", features = ["io"] }
axum = { version = "0.7.4", features = ["json", "ws", "multipart", "macros"] }
eyre = "0.6.12"
color-eyre = "0.6.2"
tracing-panic = "0.1.1"
